added Diversity Schematic figure and revisons on hatchery section

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -85,17 +85,22 @@ CH: you're right about IFR coho, but they do 'tend' to in my experience. -->
 
 ### SPATIAL SCALES OF ASSESSMENT
 
+Salmon have a complex hierarchical populations structure that extends from taxonomic species to local demes or spawning locations (Fig. \@ref(fig:DiversitySchematic)). CUs are nested within major life-history variants of a taxonomic species, such as ocean- and stream-type Chinook Salmon, *Oncorhynchus tshawytscha*, and populations are nested within CUs [@dfoCanadaPolicyConservation2005].
 While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised *Fisheries Act* indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status [@dfoPreliminary2021Salmon2021].  This provision created the need for the development of methodologies to estimate LRPs for the assessment and management of fisheries at the SMU level, while considering the need to maintain all CUs within an SMU in Amber or Green zones, i.e., above Red status. 
 
-In addition to intrinsic biological reasons for assessing status at the CU scale, this scale is also relevant for key threats and management activities for Pacific salmon, e.g., restoration of freshwater spawning or rearing habitat and hatchery enhancement. While the Fish Stocks provisions pertain to fisheries at scales relevant to harvest management, for many SMUs fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Threats and management responses also extend to larger regional scales, e.g., mitigating climate impacts. Therefore, stock assessments are required at a hierarchy of spatial scales from CUs to aggregates of CUs at regional scales, sometimes across Pacific salmon species. 
+```{r DiversitySchematic, fig.cap="Schematic representation of hierarchical population structure of Pacific salmon (left) with the spatial scales of a selection of uses and management activities alighed with those scales, including the scale of Stock Management Units, SMUs (right)", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
+knitr::include_graphics("figure/DiversitySchematic.png")
+```
 
 
-Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. While CUs are consistently nested within SMUs across species of Pacific salmon, the number of CUs within each SMU does vary among species. For example, SMUs for Sockeye Salmon, *Oncorhynchus nerka*, tend to contain a larger number of CUs than those for other salmon species because of the high levels of biodiversity among Sockeye Salmon spawning at different lakes and the relatively small spatial scale of Sockeye CUs compared with other species. At finer spatial scales within CUs, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider the distribution of populations within CUs in the assessment when it is considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs when assessing status can be challenging due to variability in meta-population dynamics and uncertain impacts of those dynamics on long-term viability, which represents a key source of uncertainty when defining LRPs.
+In addition to intrinsic biological reasons for assessing status at the CU scale, this scale is also relevant for various uses and management activities for Pacific salmon, e.g., local or terminal fisheries, food, social and ceremonial fisheries, hatchery enhancement, and watershed restoration and planning (Fig. \@ref(fig:DiversitySchematic)). While the Fish Stocks provisions pertain to fisheries at scales relevant to marine harvest management, for many SMUs those fisheries have been restricted in recent decades [@grantStateCanadianPacific2020], such that habitat and hatchery management are playing an increasingly dominant role in management responses. Food, Social and Ceremonial use of salmon by First Nations occur at a variety of scales, often within CUs at the level of populations or specific spawning locations. Threats and management responses also extend to larger regional scales, e.g., mitigating climate impacts. Therefore, stock assessments are required at a hierarchy of spatial scales from within CUs to aggregates of CUs at regional scales, sometimes across Pacific salmon species. Assesments of SMUS against LRPs cannot capture the impacts of threats or management actions at these other scales.  
+
+Given the existing framework for assessing status of Pacific salmon by CU [@holtIndicatorsStatusBenchmarks2009] and the similar intent between LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, status against lower benchmarks can be used as proxies for status against LRPs but applied at the scale of CUs instead of SMUs. The present work expands on assessment methods developed under the WSP by providing guidance on establishing LRPs at the scale of Pacific salmon SMUs by integrating across CU-level statuses within an SMU. While CUs are consistently nested within SMUs across species of Pacific salmon, the number of CUs within each SMU does vary among species. For example, SMUs for Sockeye Salmon, *O. nerka*, tend to contain a larger number of CUs than those for other salmon species because of the high levels of biodiversity among Sockeye Salmon spawning at different lakes and the relatively small spatial scale of Sockeye CUs compared with other species. At finer spatial scales within CUs, the existing framework for CU assessments includes consideration of the distribution of spawners within CUs, e.g., at the stream level [@dfoIntegratedBiologicalStatus2016]. Here we also consider the distribution of populations within CUs in the assessment when it is considered to be important for the sustainability of the CU or SMU. Identifying relevant spatial scales within CUs when assessing status can be challenging due to variability in meta-population dynamics and uncertain impacts of those dynamics on long-term viability, which represents a key source of uncertainty when defining LRPs.
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC which largely align with DFO's CUs, and Stock Groups under the Pacific Salmon Treaty, which align to some extent with SMUs. These units are not considered further here. Although the LRPs presented here are intended to be applied at the SMU scale, these methods could also be applied at smaller or larger scales to inform a variety of management decisions.
 
-
-
+We highlight previous recommendations to develop Integrated Management Processes where management objectives (including those related to biodiversity and sustainability) and management actions are integrated across biological and socio-econoic relevant spatial scales, sectors, and decision-making bodies, which allow the system to adaptively respond to statuses from routine assessments at those scales [@withlerGeneticallyBasedTargets2018].
+ 
 ## GOALS, COMPONENTS, and SCOPE OF THE WORKING PAPER
 
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
