--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -20,7 +20,7 @@ LRP methods require assessments of status at the scale of CUs. Abundance data re
 \end{itemize}
 \end{tcolorbox}
 
-Hatcheries contribute to spawning abundances of many salmon populations<!--LW: changed from stocks--> and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003], do not have biological sampling programs to collect mark and tag data from individual salmon. 
+Hatcheries contribute to spawning abundances of many salmon populations and can be used as a conservation tool as well as a way to increase the availability of fish for harvest. Hatcheries can also reduce wild genetic diversity and fitness, defined as adult-to-adult reproductive success, and are considered a risk factor for the long-term persistence of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are hatchery-origin, as well as their progeny, are not considered 'wild' under the Wild Salmon Policy. Typically, only populations dominated by wild salmon are included in assessments of biological status. However, separating out the influence of hatcheries in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin salmon are often not marked, e.g., with fin clips or fish tags, and so are indistinguishable from natural-origin spawners. Also, many salmon escapement programs, such as those where salmon spawners are counted from helicopters [@parkenIncorporatingUncertaintyArea2003], do not have biological sampling programs to collect mark and tag data from individual salmon. 
 
 ### Accounting for genetic risks of hatchery production
 
@@ -66,13 +66,13 @@ Integrated-hatchery  & $<$ 0.5 & No \\
 \end{longtable}
 
 
-When assessing population status, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild populations within biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status in our case study applications. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations<!--where coded-wire tags have been applied and sampled for recoveries-->, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with more than half of spawners being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are currently being developed by DFO's Salmonid Enhancement Program.
+When assessing population status, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild populations within biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status in our case study applications. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations<!--where coded-wire tags have been applied and sampled for recoveries-->, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with more than half of spawners being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are currently being developed by DFO's Salmonid Enhancement Program, including regular assessments of the proportion of hatchery-origin spawning.
 
 
-Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. For our case study on Chinook Salmon, <!--KH: coho uses CWTs, so perhaps just leave as WCVI chinook since this is the focus on this paragraph? Or, could add a follow-up sentence about CWT for coho?? CH: will leave for now-->proportions of hatchery-origin spawners were determined from spawning ground surveys for thermal marking on hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery versus natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors, requiring decisions about temporal averaging. For WCVI Chinook, we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation versus entire time period). 
+Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. For our case study on Chinook Salmon, <!--KH: coho uses CWTs, so perhaps just leave as WCVI chinook since this is the focus on this paragraph? Or, could add a follow-up sentence about CWT for coho?? CH: will leave for now-->proportions of hatchery-origin spawners were determined from spawning ground surveys for thermal marking on hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery- versus natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors, requiring decisions about temporal averaging. For WCVI Chinook, we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation versus entire time period). 
 
 
-In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives.<!--CH: this last sentence is in response to Chuck's Q as to if Withler recommend actions given a PNI value, or recommend management populations to a PNI value(goal). It's both. PNI goals are supposed to be developed for all pops. But for WSP assessments, hatchery-dominated pops are removed from analyses [focus of this section]--> Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program (DFO, In revision)^[DFO In revision. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC].
+In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives. Enhancement plans are being developed for hatchery-influenced populations by DFO's Salmonid Enhancement Program, which include objectives related to PNI, harvest, assessment, and stewardship and measures to achieve objectives. Once developed, enhancement plans can be integrated with harvest and habitat planning within integrated management and/or rebuilding plans. Guidelines and methods for estimating PNI values are also being documented by DFO's Salmonid Enhancement Program (DFO, In revision)^[DFO In revision. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC]. 
 
 ### Wild populations influenced by straying from hatcheries
 
@@ -81,12 +81,10 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that populations domi
 
 ### Removing the demographic influence of hatchery production
 
-For some WSP assessments that include integrated-transition and integrated-wild populations, the demographic influence of hatchery production is removed from time-series of abundances when data on the proportion of hatchery- versus natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of spawner abundance. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that all natural spawners reproduce successfully in the wild and contribute to natural production. This way, the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the metric of spawner abundances, the contribution of hatchery-origin fish can be removed from spawner time series to reduce the influence of variability in annual hatchery production on status [@dfoWildSalmonPolicy2015].
+For some WSP assessments that include integrated-transition and integrated-wild populations, the demographic influence of hatchery production is removed from time-series of abundances when data on the proportion of hatchery- versus natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of spawner abundance. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that all natural spawners reproduce successfully in the wild and contribute to natural production. This way, the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the metric of spawner abundances, the contribution of hatchery-origin fish can be removed from spawner time series to reduce the influence of variability in annual hatchery production on status [@dfoWildSalmonPolicy2015]. Although removing hatchery-origin fish from analyses is inconsistent with the recommendation of @withlerGeneticallyBasedTargets2018 to include all spawners in biological assessments when natural spawning predominates (PNI $\geqslant$ 0.5), it is consistent with existing published WSP assessments on which our analyses relied and developing new time-series was beyond the scope of this study.
 
 
-In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5) [e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may a risk of current status being confounded by hatchery production which may mask changes in natural production production and obscure inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments.
-
-
+In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5) [e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016], aligned with recommendations of @withlerGeneticallyBasedTargets2018. In these cases, there may a risk of current status being confounded by hatchery production which may mask changes in natural production production and obscure inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments. In general, we recommend flexibility in addressing hatchery-influenced populations in assessments as methods to process hatchery-origin fish and guidance evolve.
 
 
 
